--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.3.1",
-    "class-variance-authority": "^0.7.0",
+    "@clerk/nextjs": "^5.7.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.14.1",
     "lucide-react": "^0.427.0",
-    "next": "14.2.5",
+    "next": "^14.2.26",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0",
     "svix": "^1.29.0",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
